--- a/src/styles/graph.css
+++ b/src/styles/graph.css
@@ -47,6 +47,7 @@
         margin: 0 5px;
         width: 100%;
         display: flex;
+        position: relative;
 
         input[type=text] {
             flex-grow: 100;
@@ -62,13 +63,14 @@
         }
 
         .ReactTags__suggestions {
+            float: none;
             position: absolute;
             background-color: #ffffff;
             border: 2px solid #000000;
             border-radius: 2px;
             width: 200px;
+            transform: translate(0, 48px);
             z-index: 1;
-            transform: translate(0,64px);
             
             ul {
                 margin: 5px 5px;
