--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -66,6 +66,7 @@ body{
     background-color: var(--white-secondary);
     max-height: 100%;
     display: inline-flex;
+    position: relative;
     
     nav ul {
         margin: 0;
@@ -91,6 +92,7 @@ body{
         position: absolute;
         background-color: var(--white-secondary);
         min-width: 160px;
+        inset-block-end: initial;
         transform: translate(-20px, 20px);
         z-index: 1;
     }
