Added Page Layouts and Open Graph tags

--- a/src/components/nav/NavDropdown.astro
+++ b/src/components/nav/NavDropdown.astro
@@ -3,7 +3,7 @@ const { text } = Astro.props;
 ---
 
 <li class="dropdown">
-    { text }
+  { text } ˅
     <div class="dropdown-content">
       <slot />
     </div>
