--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,9 @@
 ---
-import Footer from "../components/Footer.astro"
-import Header from "../components/Header.astro"
-import Banner from "../components/Banner.astro"
-
-import '../styles/style.css'
+import Page from "../layouts/Page.astro"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Nighthawks Robotics</title>
-	</head>
-	<body>
-		<Banner />
-		<section class="container" id="main">
-			<Header />
-			<div class="segment">
-				<h1>Under construction! Check back later!</h1>
-			</div>
-			<Footer />
-		</section>
-		
-	</body>
-</html>
+<Page>
+	<div class="segment">
+		<h1>Under construction! Check back later!</h1>
+	</div>
+</Page>
