--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -3,6 +3,7 @@ import Footer from "../components/Footer.astro"
 import Header from "../components/Header.astro"
 import Banner from "../components/Banner.astro"
 
+
 import '../styles/style.css'
 
 const { title } = Astro.props
@@ -11,6 +12,16 @@ const { title } = Astro.props
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+
+		<!-- Google tag (gtag.js) for Analytics -->
+		<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-WWLYK1VVRL"></script>
+		<script type="text/partytown">
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'TAG_ID');
+		</script>
+
 		<link rel="icon" type="image/png" href="src/assets/favicon.png" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down" />
         <meta property="og:title" content=`Nighthawks Robotics - ${title}` />
