Added favicon and replaced lorem text in stats.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Page from "../layouts/Page.astro"
 ---
 
-<Page>
+<Page title="Home">
 	<div class="segment">
 		<h1>Under construction! Check back later!</h1>
 	</div>
