--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -22,11 +22,16 @@ const { title } = Astro.props
 		  gtag('config', 'TAG_ID');
 		</script>
 
-		<link rel="icon" type="image/png" href="src/assets/favicon.png" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down" />
+
+		<!-- Open Graph Tags -->
         <meta property="og:title" content=`Nighthawks Robotics - ${title}` />
+		<meta property="og:type" content="website" />
         <meta property="og:url" content="https://team24124.github.io" />
-        <meta property="og:image" content="src/assets/roboticslogo-iconcolored.png" />
+		<meta property="og:description" content="Home of Team 24124, Nighthawks Robotics!" />
+        <meta property="og:image" content="/og-image.png" />
+
 		<meta name="viewport" content="width=device-width" />
 		<title>Nighthawks Robotics - { title }</title>
 	</head>
