--- a/src/pages/stats.astro
+++ b/src/pages/stats.astro
@@ -10,7 +10,7 @@ import TeamEPAGraph from "../components/TeamEPAGraph.astro"
 		<h2>The EPA Model</h2>
 		<p>
 			The Estimated Points Added (EPA) Model was originally developed by <a href="https://www.statbotics.io/blog/intro">Statbotics</a> for use in the FIRST Robotics Competition (FRC). 
-			Nighthawks Robotics has used this model to generate statistics for all FIRST Tech Challenmge (FTC) teams in the Alberta region and have provided the following data visualization to help teams view their historical EPA.
+			Nighthawks Robotics has used this model to generate statistics for all FIRST Tech Challenge (FTC) teams in the Alberta region and have provided the following data visualization to help teams view their historical EPA.
 		</p>
 		<p>Currently only teams inside the <b>Alberta</b> region are included in our data.</p>
 		<TeamEPAGraph />
