--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -29,7 +29,7 @@ const { title } = Astro.props
         <meta property="og:title" content=`Nighthawks Robotics - ${title}` />
 		<meta property="og:type" content="website" />
         <meta property="og:url" content="https://team24124.github.io" />
-		<meta property="og:description" content="Home of Team 24124, Nighthawks Robotics!" />
+		<meta property="og:description" content="Home of Team 24124, Nighthawks Robotics! Competing in the FIRST Tech Challenge!" />
         <meta property="og:image" content="/og-image.png" />
 
 		<meta name="viewport" content="width=device-width" />
