Integrate learning portion

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ import NavItem from "./nav/NavItem.astro"
                 <a href="#">24124</a>
                 <a href="#">26145</a>
             </NavDropdown>
-            <NavItem href="/learn">Programming</NavItem>
+            <NavItem href="/learn">Learn</NavItem>
             <NavItem href="/stats">Statistics</NavItem>
             <NavItem href="/">Contact Us</NavItem>
         </ul>
