--- a/src/pages/slides.astro
+++ b/src/pages/slides.astro
@@ -1,14 +1,5 @@
 ---
+import Slideshow from "../components/learn/Slideshow.astro";
 ---
-<html>
-  <head>
-    <title>My Slides</title>
-  </head>
-  <body style="margin: 0; padding: 0; height: 100vh;">
-    <iframe 
-      src="/slides.html" 
-      style="border: none; width: 100%; height: 100vh;"
-      allowfullscreen
-    ></iframe>
-  </body>
-</html>
+
+<Slideshow src="/slides/ClassesAndOOP/index.html"/>
