Added disclaimer, 404 page and introductory statement

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import "../styles/style.css"
-import NavDropdown from "./nav/NavDropdown.astro"
-import NavItem from "./nav/NavItem.astro"
+import "../styles/style.css";
+import NavDropdown from "./nav/NavDropdown.astro";
+import NavItem from "./nav/NavItem.astro";
 ---
 
 <header>
