--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,19 @@
 ---
-import Page from "../layouts/Page.astro"
+import Page from "../layouts/Page.astro";
 ---
 
 <Page title="Home">
 	<div class="segment">
-		<h1>Under construction! Check back later!</h1>
+		<h1>Nighthawks Robotics</h1>
+		<h2></h2>
+		<p>
+			<b>Nighthawks Robotics</b> is a high school robotics team from <b
+				>North Trail High School</b
+			> in <b>Calgary, Alberta</b>. We currently have two teams (<a
+				href="#">24124</a
+			> and <a href="#">26145</a>) competing in the <i
+				>FIRST Tech Challenge</i
+			>.
+		</p>
 	</div>
 </Page>
