--- a/src/pages/stats.astro
+++ b/src/pages/stats.astro
@@ -1,6 +1,6 @@
 ---
-import Page from "../layouts/Page.astro"
-import TeamEPAGraph from "../components/stats/TeamEPAGraph.astro"
+import Page from "../layouts/Page.astro";
+import TeamEPAGraph from "../components/stats/TeamEPAGraph.astro";
 ---
 
 <Page title="Stats">
@@ -9,10 +9,23 @@ import TeamEPAGraph from "../components/stats/TeamEPAGraph.astro"
 
 		<h2>The EPA Model</h2>
 		<p>
-			The Expected Points Added (EPA) Model was originally developed by <a href="https://www.statbotics.io/blog/intro">Statbotics</a> for use in the FIRST Robotics Competition (FRC). 
-			Nighthawks Robotics has used this model to generate statistics for all FIRST Tech Challenge (FTC) teams in the Alberta region and have provided the following data visualization to help teams view their historical EPA.
+			The Expected Points Added (EPA) Model was originally developed by <a
+				href="https://www.statbotics.io/blog/intro">Statbotics</a
+			> for use in the FIRST Robotics Competition (FRC). Nighthawks Robotics
+			has used this model to generate statistics for all FIRST Tech Challenge
+			(FTC) teams in the Alberta region and have provided the following data
+			visualization to help teams view their historical EPA.
 		</p>
-		<p>Currently only teams inside the <b>Alberta</b> region are included in our data.</p>
+		<p>
+			Currently only teams inside the <b>Alberta</b> region are included in
+			our data.
+		</p>
 		<TeamEPAGraph />
+
+		<a
+			class="disclaimer"
+			href="https://frc-events.firstinspires.org/services/API"
+			><p>Event Data provided by <i>FIRST</i></p></a
+		>
 	</div>
 </Page>
