--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,12 +13,12 @@ html {
     scroll-behavior: smooth;
 }
 
-body{ 
+body {
     overflow-y: scroll;
     overflow-x: hidden;
     background: var(--nths_primary);
     background: linear-gradient(180deg, var(--nths_primary) 25%, rgb(0, 33, 61) 100%);
-    height: 100%; 
+    height: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
@@ -42,6 +42,10 @@ body{
     object-fit: contain;
 }
 
+.segment .disclaimer {
+    color: var(--gray-highlight)
+}
+
 #banner {
     display: block;
     margin-top: 40px;
@@ -53,25 +57,26 @@ body{
     background-color: var(--white-primary);
     font-family: 'Open Sans', sans-serif;
     min-height: 100%;
+
     h1 {
         font-family: 'Open Sans', sans-serif;
         font-weight: bold;
     }
-    
+
 }
 
-#main header {    
+#main header {
     padding: 0 0;
     text-align: center;
     background-color: var(--white-secondary);
     max-height: 100%;
     display: inline-flex;
     position: relative;
-    
+
     nav ul {
         margin: 0;
         padding: 0 32px;
-        
+
     }
 
     /* Dropdown button */
@@ -82,8 +87,10 @@ body{
         color: white;
         padding: 14px 16px;
         background-color: inherit;
-        font-family: inherit; /* Important for vertical align on mobile phones */
-        margin: 0; /* Important for vertical align on mobile phones */
+        font-family: inherit;
+        /* Important for vertical align on mobile phones */
+        margin: 0;
+        /* Important for vertical align on mobile phones */
     }
 
     /* Style the dropdown content (hidden by default) */
@@ -96,7 +103,7 @@ body{
         transform: translate(-20px, 20px);
         z-index: 1;
     }
-    
+
     /* Style the links inside the dropdown */
     .dropdown-content a {
         float: none;
@@ -111,7 +118,7 @@ body{
     .dropdown-content a:hover {
         background-color: var(--gray-highlight);
     }
-    
+
     /* Show the dropdown menu on hover */
     .dropdown:hover .dropdown-content {
         display: block;
@@ -127,6 +134,7 @@ body{
             text-decoration: none;
         }
     }
+
     nav li:hover {
         background-color: var(--gray-highlight);
     }
@@ -138,10 +146,12 @@ body{
     padding: 8px 0;
     max-height: 100%;
     background-color: var(--white-secondary);
+
     span {
         display: inline-block;
         vertical-align: text-top;
-        line-height: 1em; /*set line height back to normal*/
+        line-height: 1em;
+        /*set line height back to normal*/
     }
 }
 
@@ -156,6 +166,7 @@ body{
 .footer-item {
     align-self: baseline;
     margin: 0 32px;
+
     .footer-item.title {
         font-weight: bold;
     }
@@ -191,14 +202,16 @@ body{
     #banner {
         display: flex;
         justify-content: center;
+
         img {
             width: 90%;
         }
     }
 
-    .segment{
+    .segment {
         margin: 0 4vw;
     }
+
     .container {
         display: grid;
         justify-self: center;
