Removed unused images, added team photo banner

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,13 @@
 ---
 import Page from "../layouts/Page.astro";
+import teamPhoto from "../assets/media/250201 Robotics Tournament-0823-IMG_1301 (Vaast).jpg";
 ---
 
 <Page title="Home">
 	<div class="segment">
-		<h1>Nighthawks Robotics</h1>
-		<h2></h2>
+		<img id="teamPhoto" src={teamPhoto.src}>
 		<p>
-			<b>Nighthawks Robotics</b> is a high school robotics team from <b
-				>North Trail High School</b
-			> in <b>Calgary, Alberta</b>. We currently have two teams (<a
-				href="#">24124</a
-			> and <a href="#">26145</a>) competing in the <i
-				>FIRST Tech Challenge</i
-			>.
+			<b>Nighthawks Robotics</b> is a high school robotics team from <b>North Trail High School</b> in <b>Calgary, Alberta</b> with three teams competing in the <i>FIRST Tech Challenge</i>.
 		</p>
 	</div>
 </Page>
