--- a/src/pages/learn/index.astro
+++ b/src/pages/learn/index.astro
@@ -2,8 +2,10 @@
 import { fade } from "astro:transitions";
 import Page from "../../layouts/Page.astro"
 import fs from 'fs';
-import robotPhoto from "../../assets/20250316 FIRST Tech Challenge Alberta Championship 742.jpg"
+import robotPhoto from "../../assets/media/20250316 FIRST Tech Challenge Alberta Championship 742.jpg"
+
 const slideFiles = fs.readdirSync('src/pages/learn/slides')
+const pptxFiles = fs.readdirSync('public/content/slides').filter(f => f.endsWith(".pptx"));
 const exerciseFiles = fs.readdirSync('public/content/exercises').filter(f => f.endsWith(".zip"));
 ---
 
@@ -24,10 +26,11 @@ const exerciseFiles = fs.readdirSync('public/content/exercises').filter(f => f.e
       <div class="segment">
         <h2 id="lessons">Lessons</h2>
         <p>
-          Find below a collection of slideshows (powered by Marp) and lessons covering topics from basics with the Java programming language to working with the FTC SDK, trajectory planning libraries and more.
+          Find below a collection of slideshows and lessons covering topics from basics with the Java programming language to working with the FTC SDK, trajectory planning libraries and more.
         </p>
         <ul>
             {slideFiles.map(slide => <li><a href={`/learn/slides/${slide}`}>{slide}</a></li>)}
+            {pptxFiles.map(pptx => <li><a href={`/content/slides/${pptx}`} download>{`${pptx}`}</a></li>)}
         </ul>
       </div>
 
