--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -189,6 +189,14 @@ body {
     align-self: center;
 }
 
+img#teamPhoto {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
 @media only screen and (max-width: 940px) {
 
     .footer-items {
