--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
-		  gtag('config', 'TAG_ID');
+		  gtag('config', 'G-WWLYK1VVRL');
 		</script>
 
 		<link rel="icon" type="image/png" href="/favicon.png" />
