--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -14,16 +14,24 @@ const { title } = Astro.props
 		<meta charset="utf-8" />
 
 		<!-- Google tag (gtag.js) for Analytics -->
-		<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-WWLYK1VVRL"></script>
-		<script type="text/partytown">
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-		  gtag('config', 'G-WWLYK1VVRL');
-		</script>
+		<script is:inline type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-WWLYK1VVRL"></script>
+		<script is:inline type="text/partytown">
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
 
-		<link rel="icon" type="image/png" href="/favicon.png" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down" />
+			// Deny consent by default and only collect anonymous data to be GDPR compliant
+			gtag("consent", "default", {
+				ad_storage: "denied",
+				ad_user_data: "denied",
+				ad_personalization: "denied",
+				analytics_storage: "denied",
+			});
+
+			gtag('config', 'G-WWLYK1VVRL');
+		</script>
 
 		<!-- Open Graph Tags -->
         <meta property="og:title" content=`Nighthawks Robotics - ${title}` />
