--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -2,6 +2,7 @@
 import Footer from "../components/Footer.astro"
 import Header from "../components/Header.astro"
 import Banner from "../components/Banner.astro"
+import Head from "../components/Head.astro"
 
 
 import '../styles/style.css'
@@ -10,39 +11,7 @@ const { title } = Astro.props
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-
-		<!-- Google tag (gtag.js) for Analytics -->
-		<script is:inline type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-WWLYK1VVRL"></script>
-		<script is:inline type="text/partytown">
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag('js', new Date());
-
-			// Deny consent by default and only collect anonymous data to be GDPR compliant
-			gtag("consent", "default", {
-				ad_storage: "denied",
-				ad_user_data: "denied",
-				ad_personalization: "denied",
-				analytics_storage: "denied",
-			});
-
-			gtag('config', 'G-WWLYK1VVRL');
-		</script>
-
-		<!-- Open Graph Tags -->
-        <meta property="og:title" content=`Nighthawks Robotics - ${title}` />
-		<meta property="og:type" content="website" />
-        <meta property="og:url" content="https://team24124.github.io" />
-		<meta property="og:description" content="Home of Team 24124, Nighthawks Robotics! Competing in the FIRST Tech Challenge!" />
-        <meta property="og:image" content="/og-image.png" />
-
-		<meta name="viewport" content="width=device-width" />
-		<title>Nighthawks Robotics - { title }</title>
-	</head>
+	<Head title={title}/>
 	<body>
 		<Banner />
 		<section class="container" id="main">
@@ -50,6 +19,5 @@ const { title } = Astro.props
 			<slot />
 			<Footer />
 		</section>
-		
 	</body>
 </html>
