--- a/src/pages/stats.astro
+++ b/src/pages/stats.astro
@@ -1,6 +1,7 @@
 ---
 import Page from "../layouts/Page.astro";
 import TeamEPAGraph from "../components/stats/TeamEPAGraph.astro";
+import TeamEPATable from "../components/stats/TeamEPATable.astro";
 ---
 
 <Page title="Stats">
@@ -17,8 +18,7 @@ import TeamEPAGraph from "../components/stats/TeamEPAGraph.astro";
 			visualization to help teams view their historical EPA.
 		</p>
 		<p>
-			Currently only teams inside the <b>Alberta</b> region are included in
-			our data.
+			Data is up to date to include <i>FIRST Championship</i>.
 		</p>
 		<TeamEPAGraph />
 
