--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,5 +1,5 @@
 ---
-const { title } = Astro.props
+const { title } = Astro.props;
 ---
 
 <head>
@@ -9,21 +9,28 @@ const { title } = Astro.props
     <meta property="og:title" content=`Nighthawks Robotics - ${title}` />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://team24124.github.io" />
-    <meta property="og:description" content="Home of Team 24124, Nighthawks Robotics! Competing in the FIRST Tech Challenge!" />
+    <meta
+        property="og:description"
+        content="Home of Team 24124, Nighthawks Robotics! Competing in the FIRST Tech Challenge!"
+    />
     <meta property="og:image" content="/og-image.png" />
 
     <meta name="viewport" content="width=device-width" />
-    <title>Nighthawks Robotics - { title }</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <title>Nighthawks Robotics - {title}</title>
 </head>
 
 <!-- Google tag (gtag.js) for Analytics -->
-<script is:inline type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-WWLYK1VVRL"></script>
+<script
+    is:inline
+    type="text/partytown"
+    src="https://www.googletagmanager.com/gtag/js?id=G-WWLYK1VVRL"></script>
 <script is:inline type="text/partytown">
     window.dataLayer = window.dataLayer || [];
     function gtag() {
         dataLayer.push(arguments);
     }
-    gtag('js', new Date());
+    gtag("js", new Date());
 
     // Deny consent by default and only collect anonymous data to be GDPR compliant
     gtag("consent", "default", {
@@ -33,5 +40,5 @@ const { title } = Astro.props
         analytics_storage: "denied",
     });
 
-    gtag('config', 'G-WWLYK1VVRL');
+    gtag("config", "G-WWLYK1VVRL");
 </script>
