--- a/src/pages/stats.astro
+++ b/src/pages/stats.astro
@@ -27,5 +27,7 @@ import TeamEPATable from "../components/stats/TeamEPATable.astro";
 			href="https://frc-events.firstinspires.org/services/API"
 			><p>Event Data provided by <i>FIRST</i></p></a
 		>
+
+		<TeamEPATable is:inline />
 	</div>
 </Page>
