Changed placeholder text

--- a/src/components/stats/TeamEPATable.astro
+++ b/src/components/stats/TeamEPATable.astro
@@ -57,6 +57,11 @@ import "../../styles/graph.css";
     sort: true,
     search: true,
     data: parseAllTeamData(data),
+    language: {
+      'search': {
+        'placeholder': 'Enter a valid team number.'
+      },
+    }
     })
 
   if(element != null) {
